报告输出调整